--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,39 @@
-#into {
-  background: BLUE;
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Spartan:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
+body {
+  background-color: #a3cef1;
+}
+
+body #header {
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  z-index: 10;
+}
+
+body #header .navbar {
+  height: 100px;
+  background-color: #a3cef1;
+}
+
+body #header .navbar .navbar-nav {
+  font-family: 'Spartan';
+  font-weight: bolder;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  margin-right: 30px;
+}
+
+body #header .navbar .navbar-nav a {
+  color: #274c77;
+}
+
+body #header .navbar .navbar-nav a:hover {
+  color: #8b8c89;
+}
+
+body #page {
+  margin: 150px 0px 150px 0px;
 }
 /*# sourceMappingURL=styles.css.map */
