--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,6 +14,16 @@ $gray: #8b8c89;
 
 body{
     background-color: $light-blue; 
+    h1{
+        font-family:'Spartan';
+        padding:10px 0px;
+        color:$dark-blue;
+    }
+
+    p{
+        font-family:'DM Sans';
+        padding:10px 0px;
+    }
 
     #header{
         position: fixed;
@@ -36,7 +46,7 @@ body{
                     color:$dark-blue;
         
                     &:hover{
-                        color:$gray;
+                        color:$light-gray;
                     }
         
                 }
@@ -48,7 +58,76 @@ body{
     }
     
     #page{
-        margin:150px 0px 150px 0px;
+        margin:160px 0px 150px 0px;
+
+        .btn{
+            background-color: $blue;
+            border-color:$blue;
+            font-family: 'DM Sans';
+            font-weight:bolder;
+            color:white;
+
+            &:hover{
+                background-color: $dark-blue;
+                border-color:$dark-blue;
+            }
+        }
+
+        .section{
+            align-items: center;
+            margin-bottom:200px;
+        }
+      
+        .about{
+            text-align:right;
+        }
+
+        .team{
+            justify-content:center;
+        }
+
+        // .features{
+        //     justify-content:center;
+        // }
+
+        .columns{
+            text-align:center;
+        }
+        .pictures{
+            padding:20px 0px;
+        }
+
+        .image {
+            width: 250px;
+            height: 250px;
+            border-radius: 5%;
+            margin: 0 auto
+        }
+        img {
+            width: 250px;
+            height: 250px;
+            border-radius: 5%
+        }
+
+        .fit-image {
+            width: 100%;
+            object-fit: cover
+        }
+
+        .image-name {
+            font-size:24px;
+            font-weight: bold;
+            color:$dark-blue;
+        }
+
+        .socials{
+            color:$blue;
+
+            &:hover{
+                text-decoration: none;
+                color:$dark-blue;
+            }
+        }
     }
 }
 
