Update Team Info

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -111,7 +111,7 @@ body{
 
         .fit-image {
             width: 100%;
-            object-fit: cover
+            object-fit: cover;
         }
 
         .image-name {
