--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Spartan:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
 body {
-  background-color: #a3cef1;
+  background-image: linear-gradient(#fdfdfd,#a3cef1);
+}
+
+.fade {
+  opacity: 1;
 }
 
 body h1 {
@@ -24,7 +28,8 @@ body #header {
 
 body #header .navbar {
   height: 100px;
-  background-color: #a3cef1;
+  background-color: #e7ecef;
+  box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 }
 
 body #header .navbar .navbar-nav {
