--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Spartan:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
 body {
-  background-image: linear-gradient(#fdfdfd,#a3cef1);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#fdfdfd), to(#a3cef1));
+  background-image: linear-gradient(#fdfdfd, #a3cef1);
 }
 
-.fade {
+body .fade {
   opacity: 1;
 }
 
@@ -29,7 +30,8 @@ body #header {
 body #header .navbar {
   height: 100px;
   background-color: #e7ecef;
-  box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+  -webkit-box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
 }
 
 body #header .navbar .navbar-nav {
@@ -46,7 +48,7 @@ body #header .navbar .navbar-nav a {
 }
 
 body #header .navbar .navbar-nav a:hover {
-  color: #e7ecef;
+  color: #6096ba;
 }
 
 body #page {
