--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -13,7 +13,12 @@ $gray: #8b8c89;
 
 
 body{
-    background-color: $light-blue; 
+    background-image: linear-gradient(#fdfdfd,#a3cef1);
+      
+    .fade {
+    opacity: 1;
+    }
+
     h1{
         font-family:'Spartan';
         padding:10px 0px;
@@ -34,7 +39,8 @@ body{
             
             height:100px;
             //border:1px solid black;
-            background-color: $light-blue;
+            background-color: #e7ecef;
+            box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 
             .navbar-nav{
                 font-family: 'Spartan';
